@@ -1,69 +1,70 @@
 package com.ncst.job.portal.security;
-import java.io.IOException; 
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.stereotype.Component;
-import org.springframework.web.filter.OncePerRequestFilter;
+
+import java.io.IOException;
+import java.util.Arrays;
+import java.util.List;
+
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-import java.util.List;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.lang.NonNull;
-import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.stereotype.Component;
 import org.springframework.util.AntPathMatcher;
+import org.springframework.web.filter.OncePerRequestFilter;
+
 import io.jsonwebtoken.ExpiredJwtException;
 import io.jsonwebtoken.MalformedJwtException;
 
-/**
- * JwtAuthenticationFilter:
- * - extracts Bearer token from Authorization header
- * - validates token using JwtTokenHelper
- * - sets Spring Security context if token valid
- *
- * Register this filter before UsernamePasswordAuthenticationFilter in SecurityConfig.
- */
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
 
     private static final Logger logger = LoggerFactory.getLogger(JwtAuthFilter.class);
 
-    private final AntPathMatcher pathMatcher = new AntPathMatcher();
-
-    // Paths to bypass (swagger/docs, public auth endpoints, static resources, actuator)
-    private final List<String> skipPaths = List.of(
-            "/api/auth/**",
+    // Patterns we want to skip filtering for (swagger, api-docs, auth endpoints, webjars, etc)
+    private final List<String> skipPaths = Arrays.asList(
+            "/v3/api-docs",
             "/v3/api-docs/**",
             "/swagger-ui/**",
-            "/swagger-resources/**",
             "/swagger-ui.html",
-            "/actuator/**",
-            "/public/**",        // any static/public endpoints you might use
-            "/files/**"          // if you expose resumes/files publicly
+            "/swagger-ui/index.html",
+            "/swagger-resources/**",
+            "/webjars/**",
+            "/api/auth/**",
+            "/api/users/register"
     );
 
-    @Autowired
-    private UserDetailsService userDetailsService; // your UserDetailsServiceImpl
+    private final AntPathMatcher pathMatcher = new AntPathMatcher();
 
     @Autowired
-    private JwtTokenHelper jwtTokenHelper; // implement this (see contract below)
+    private CustomUserDetailsService userDetailsService; // or UserDetailsService
+
+    @Autowired
+    private JwtTokenHelper jwtTokenHelper; // your helper to parse/validate tokens
 
     @Override
     protected boolean shouldNotFilter(@NonNull HttpServletRequest request) throws ServletException {
-        // skip preflight requests immediately
+        // Always skip preflight
         if ("OPTIONS".equalsIgnoreCase(request.getMethod())) {
             return true;
         }
 
-        String path = request.getRequestURI();
-        // if any skip pattern matches, do not filter (let other security config permit)
+        // Build the request path to test against patterns (handles servlet context if any)
+        String servletPath = request.getServletPath(); // e.g. "/v3/api-docs"
+        String pathInfo = request.getPathInfo(); // maybe null
+        String fullPath = (pathInfo != null) ? servletPath + pathInfo : servletPath;
+
         for (String pattern : skipPaths) {
-            if (pathMatcher.match(pattern, path)) {
+            if (pathMatcher.match(pattern, fullPath)) {
+                logger.debug("Skipping JWT filter for path: {} (pattern matched: {})", fullPath, pattern);
                 return true;
             }
         }
@@ -94,11 +95,9 @@ public class JwtAuthFilter extends OncePerRequestFilter {
                 logger.error("Error while parsing JWT token", ex);
             }
         } else {
-            // no token or not Bearer: we allow request to proceed and SecurityConfig will block protected endpoints
-            logger.debug("No Bearer token found in request");
+            logger.debug("No Bearer token found in request: {} {}", request.getMethod(), request.getRequestURI());
         }
 
-        // if username was extracted and user is not already authenticated in context
         if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
             try {
                 UserDetails userDetails = userDetailsService.loadUserByUsername(username);
